# cc-jsonparser

./: README.md  pyproject.toml
src/cc_jsonparser/: main.py
tests/: test_jsonparser.py
