[tool.poetry]
name = "cc-jsonparser"
version = "0.1.0"
description = ""
authors = ["Simon Yuen <54995458+syuen23@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
pytest = "^8.1.1"
black = "^24.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cc-jsonparser = "cc_jsonparser.main:compile_json_file"